--- a/resim/vize-odev.html
+++ b/resim/vize-odev.html
@@ -70,10 +70,10 @@
 
     <blockquote>"2024 Yılında Japonya'da en çok seyredilen anime Frieren oldu."</blockquote>
     <br>
-    <img src="frieren_beyond journey's end.jpeg" width="500" height="300">
+    <img src="frieren_ beyond journey's end.jpeg" width="245" height="368">
     <p>En sevdiğiniz anime karakterleri arasında <mark>Denji, Kobeni, Makima, Power</mark> gibi isimler olabilir!</p>
     <br>
-    <img src="chainsaw_man.jpg" width="500" height="300">
+    <img src="Chainsaw_Man_Japanese_logo_with_red_outline.png" width="500" height="280">
 
     <h2>Bölüm Bağlantıları</h2>
     <p>Sayfanın farklı bölümlerine gitmek için aşağıdaki bağlantıları kullanabilirsiniz:</p>
